feat: add basic Kubernetes controller to handle events from API
